- Updated the note for expired steps to include the step name.