@@ -69,8 +69,13 @@ table#gravityflow-inbox td[data-label="ID"] {
     filter: brightness(1.8) grayscale(1) opacity(.5);
 }
 
-.gravityflow-action{
+.gravityflow-action,
+.gravityflow-actions-unlock{
     cursor: pointer;
+    margin-right: 5px;
+}
+
+.gravityflow-actions-lock{
     margin-right: 5px;
 }
 
@@ -86,4 +91,17 @@ table#gravityflow-inbox td[data-label="ID"] {
 
 .gravityflow-action-processed{
     cursor: default;
+}
+
+.gravityflow-actions-note-field-container{
+    position:absolute;
+    z-index: 99;
+    text-align: left;
+    background-color: white;
+    border:1px solid silver;
+    padding: 5px;
+
+}
+.gravityflow-actions-note-field-container textarea {
+    width:200px;
 }
